tests/invalid/out_of_scope.c
int main() {
    {
        int a = 2;
    }
    return a;
}
// ERROR: Line 5, Error 3001